--- a/giftbike.css
+++ b/giftbike.css
@@ -23,3 +23,18 @@ div[style*="position: fixed"] button {
 div[style*="position: fixed"] button:hover {
   background-color: #0056b3;
 }
+
+div[style*="position: fixed"] .cookie-notice {
+  font-size: 0.8em;
+  margin-top: 15px;
+  color: #666;
+}
+
+div[style*="position: fixed"] .cookie-notice a {
+  color: #007bff;
+  text-decoration: underline;
+}
+
+div[style*="position: fixed"] .cookie-notice a:hover {
+  color: #0056b3;
+}
