--- a/giftbike.css
+++ b/giftbike.css
@@ -21,7 +21,7 @@ div[style*="position: fixed"] button {
 }
 
 div[style*="position: fixed"] button:hover {
-  background-color: #218838; /* Тёмный зелёный при наведении */
+  background-color: #218838; /* Тёмный зелёный */
 }
 
 div[style*="position: fixed"] .cookie-notice {
@@ -31,12 +31,12 @@ div[style*="position: fixed"] .cookie-notice {
 }
 
 div[style*="position: fixed"] .cookie-notice a {
-  color: #28a745; /* Зелёный для ссылки */
+  color: #28a745; /* Зелёный */
   text-decoration: underline;
 }
 
 div[style*="position: fixed"] .cookie-notice a:hover {
-  color: #218838; /* Тёмный зелёный при наведении */
+  color: #218838; /* Тёмный зелёный */
 }
 
 div[style*="position: fixed"] .close-btn {
@@ -49,15 +49,19 @@ div[style*="position: fixed"] .close-btn {
   line-height: 24px;
   text-align: center;
   padding: 0;
-  background-color: #28a745; /* Зелёный */
   border-radius: 4px;
+  background-color: #28a745;
 }
 
 div[style*="position: fixed"] .close-btn:hover {
-  background-color: #218838; /* Тёмный зелёный */
+  background-color: #218838;
+}
+
+div[style*="position: fixed"] .close-main-container {
+  text-align: center;
+  margin-top: 10px;
 }
 
 div[style*="position: fixed"] .close-main {
-  display: inline-block;
   width: auto;
 }
