--- a/giftbike.css
+++ b/giftbike.css
@@ -39,20 +39,15 @@ div[style*="position: fixed"] .cookie-notice a:hover {
   color: #0056b3; /* Тёмный синий */
 }
 
-div[style*="position: fixed"] .close-main-container {
-  text-align: center;
-  margin-top: 10px;
-}
-
 div[style*="position: fixed"] .close {
   position: absolute;
-  top: 0;
-  right: 10px;
+  top: 5px;
+  right: 5px;
   cursor: pointer;
   font-size: 20px;
   color: #333;
 }
 
 div[style*="position: fixed"] .close:hover {
-  color: #000;
+  color: #f00;
 }
