--- a/giftbike.css
+++ b/giftbike.css
@@ -44,6 +44,16 @@ div[style*="position: fixed"] .close {
   top: 0;
   right: 10px;
   cursor: pointer;
-  font-size: 20px;
+  font-size: 24px; /* Увеличен с 20px */
   color: #333;
+  padding: 5px; /* Для удобства нажатия */
+}
+
+div[style*="position: fixed"] .close:hover {
+  color: #f00;
+}
+
+div[style*="position: fixed"] .center-close {
+  text-align: center;
+  margin-top: 10px;
 }
